@@ -328,6 +328,14 @@ int DockWidgetBase::tabIndex() const
     return 0;
 }
 
+int DockWidgetBase::currentTabIndex() const
+{
+    if (Frame *frame = d->frame())
+        return frame->currentTabIndex();
+
+    return 0;
+}
+
 void DockWidgetBase::setIcon(const QIcon &icon, IconPlaces places)
 {
     if (places & IconPlace::TitleBar)
